Hide Card, Refactor - Hide chat cards when the user is not whispered. - Refactor code into smaller methods.

--- a/languages/dnd5e/en.json
+++ b/languages/dnd5e/en.json
@@ -9,6 +9,7 @@
             "activeEffect.disabled": "Active Effect Disabled",
             "actor.flags.dnd5e.initiativeAlert": "Initiative Alert Feat",
             "actor.flags.dnd5e.initiativeAdv": "Advantage on Initiative",
+            "actor.name": "Name",
             "actor.system.abilities.cha.bonuses.check": "Charisma Check Bonus",
             "actor.system.abilities.cha.bonuses.save": "Charisma Saving Throw Bonus",
             "actor.system.abilities.cha.proficient": "Charisma Proficiency",
@@ -38,6 +39,8 @@
             "actor.system.attributes.death.success": "Successful Death Saves",
             "actor.system.attributes.death.failure": "Failed Death Saves",
             "actor.system.attributes.exhaustion": "Exhaustion",
+            "actor.system.attributes.hp.bonuses.level": "Per-Level HP Bonus",
+            "actor.system.attributes.hp.bonuses.overall": "Overall HP Bonus",
             "actor.system.attributes.hp.value": "Current HP",
             "actor.system.attributes.hp.max": "Max HP",
             "actor.system.attributes.init.bonus": "Initiative Bonus",
@@ -61,7 +64,15 @@
             "actor.system.currency.gp": "Gold",
             "actor.system.currency.pp": "Platinum",
             "actor.system.currency.sp": "Silver",
+            "actor.system.details.alignment": "Alignment",
+            "actor.system.details.race": "Race",
             "actor.system.details.xp.value": "Experience",
+            "actor.system.resources.primary.max": "Max Primary Resource",
+            "actor.system.resources.primary.value": "Current Primary Resource",
+            "actor.system.resources.secondary.max": "Max Secondary Resource",
+            "actor.system.resources.secondary.value": "Current Secondary Resource",
+            "actor.system.resources.tertiary.max": "Max Tertiary Resource",
+            "actor.system.resources.tertiary.value": "Current Tertiary Resource",
             "actor.system.skills.acr.ability": "Acrobatics Ability Modifier",
             "actor.system.skills.acr.bonuses.check": "Acrobatics Check Bonus",
             "actor.system.skills.acr.bonuses.passive": "Acrobatics Passive Bonus",
@@ -155,6 +166,7 @@
             "actor.system.traits.size": "Size",
             "item.system.equipped": "Equipped",
             "item.system.hitDiceUsed": "Hit Dice Used",
+            "item.system.level": "Level",
             "item.system.preparation.prepared": "Prepared",
             "item.system.quantity": "Quantity",
             "item.system.uses.value": "Available Uses",
