Really Hide Card, Update README - Hide card even when module is disabled. - Update README.

--- a/languages/dnd5e/en.json
+++ b/languages/dnd5e/en.json
@@ -14,7 +14,7 @@
             "actor.system.abilities.cha.bonuses.save": "Charisma Saving Throw Bonus",
             "actor.system.abilities.cha.proficient": "Charisma Proficiency",
             "actor.system.abilities.cha.value": "Charisma Score",
-            "actor.system.abilities.con.bonuses.check": "Connstitution Check Bonus",
+            "actor.system.abilities.con.bonuses.check": "Constitution Check Bonus",
             "actor.system.abilities.con.bonuses.save": "Constitution Saving Throw Bonus",
             "actor.system.abilities.con.proficient": "Constitution Proficiency",
             "actor.system.abilities.con.value": "Constitution Score",
