Show Recipients - Add module setting to show or hide the recipients on the chat card.

--- a/languages/en.json
+++ b/languages/en.json
@@ -27,6 +27,10 @@
                 "name": "Changes for Player",
                 "label": "Changes for Player",
                 "hint": "Changes to log for the player"
+            },
+            "showRecipients": {
+                "name": "Show Recipients",
+                "hint": "Choose whether to show recipients on the chat card"
             }
         },
         "tagForm": {
