--- a/languages/dnd5e/en.json
+++ b/languages/dnd5e/en.json
@@ -10,6 +10,7 @@
             "actor.flags.dnd5e.initiativeAlert": "Initiative Alert Feat",
             "actor.flags.dnd5e.initiativeAdv": "Advantage on Initiative",
             "actor.name": "Name",
+            "actor.inCombat": "In Combat",
             "actor.system.abilities.cha.bonuses.check": "Charisma Check Bonus",
             "actor.system.abilities.cha.bonuses.save": "Charisma Saving Throw Bonus",
             "actor.system.abilities.cha.proficient": "Charisma Proficiency",
@@ -38,6 +39,10 @@
             "actor.system.attributes.ac.flat": "AC Flat",
             "actor.system.attributes.death.success": "Successful Death Saves",
             "actor.system.attributes.death.failure": "Failed Death Saves",
+            "actor.system.attributes.encumbrance.value": "Current Encumbrance",
+            "actor.system.attributes.encumbrance.max": "Max Encumbrance",
+            "actor.system.attributes.encumbrance.pct": "Encumbrance %",
+            "actor.system.attributes.encumbrance.encumbered": "Encumbered",
             "actor.system.attributes.exhaustion": "Exhaustion",
             "actor.system.attributes.hp.bonuses.level": "Per-Level HP Bonus",
             "actor.system.attributes.hp.bonuses.overall": "Overall HP Bonus",
@@ -67,6 +72,12 @@
             "actor.system.details.alignment": "Alignment",
             "actor.system.details.race": "Race",
             "actor.system.details.xp.value": "Experience",
+            "actor.system.resources.lair.value": "Uses Lair Action",
+            "actor.system.resources.lair.initiative": "Lair Action Initiative",
+            "actor.system.resources.legact.value": "Current Legendary Actions",
+            "actor.system.resources.legact.max": "Max Legendary Actions",
+            "actor.system.resources.legres.value": "Current Legendary Resistances",
+            "actor.system.resources.legres.max": "Max Legendary Resistances",
             "actor.system.resources.primary.max": "Max Primary Resource",
             "actor.system.resources.primary.value": "Current Primary Resource",
             "actor.system.resources.secondary.max": "Max Secondary Resource",
