#2 - Add Pact Magic Spell Slot properties.

--- a/languages/dnd5e/en.json
+++ b/languages/dnd5e/en.json
@@ -156,6 +156,11 @@
             "actor.system.skills.sur.bonuses.check": "Survival Check Bonus",
             "actor.system.skills.sur.bonuses.passive": "Survival Passive Bonus",
             "actor.system.skills.sur.value": "Survival Proficiency",
+            "actor.system.spells.pact.level": "Pact Magic Spell Slot Level",
+            "actor.system.spells.pact.max": "Max Pact Magic Spell Slots",
+            "actor.system.spells.pact.slotAvailable": "Pact Magic Spell Slot Available",
+            "actor.system.spells.pact.slotsAvailable": "Pact Magic Spell Slots Available",
+            "actor.system.spells.pact.value": "Current Pact Magic Spell Slots",
             "actor.system.spells.spell1.value": "Current 1st Level Spell Slots",
             "actor.system.spells.spell1.max": "Max 1st Level Spell Slots",
             "actor.system.spells.spell2.value": "Current 2nd Level Spell Slots",
