--- a/languages/cyphersystem/en.json
+++ b/languages/cyphersystem/en.json
@@ -55,7 +55,20 @@
             "item.system.basic.steps": "Steps",
             "item.system.basic.type": "Item Type",
             "item.system.basic.totalModified": "Total Modified",
-            "item.system.weight": "Weight"
+            "item.system.weight": "Weight",
+            "token.disposition": "Disposition",
+            "token.elevation": "Elevation",
+            "token.name": "Token Name",
+            "token.rotation": "Rotation",
+            "token.sight.angle": "Sight Angle",
+            "token.sight.attenuation": "Sight Attenuation",
+            "token.sight.brightness": "Sight Brightness",
+            "token.sight.color": "Sight Color",
+            "token.sight.contrast": "Sight Contrast",
+            "token.sight.enabled": "Sight Enabled",
+            "token.sight.range": "Sight Range",
+            "token.sight.saturation": "Sight Saturation",
+            "token.sight.visionMode": "Vision Mode"
         }
     }
 }
