--- a/languages/dnd5e/en.json
+++ b/languages/dnd5e/en.json
@@ -187,7 +187,20 @@
             "item.system.quantity": "Quantity",
             "item.system.uses.value": "Available Uses",
             "item.system.uses.max": "Max Uses",
-            "item.system.weight": "Weight"
+            "item.system.weight": "Weight",
+            "token.disposition": "Disposition",
+            "token.elevation": "Elevation",
+            "token.name": "Token Name",
+            "token.rotation": "Rotation",
+            "token.sight.angle": "Sight Angle",
+            "token.sight.attenuation": "Sight Attenuation",
+            "token.sight.brightness": "Sight Brightness",
+            "token.sight.color": "Sight Color",
+            "token.sight.contrast": "Sight Contrast",
+            "token.sight.enabled": "Sight Enabled",
+            "token.sight.range": "Sight Range",
+            "token.sight.saturation": "Sight Saturation",
+            "token.sight.visionMode": "Vision Mode"
         }
     }
 }
