Add support for the Customizable Chat Tabs module

--- a/languages/en.json
+++ b/languages/en.json
@@ -1,4 +1,5 @@
 {
+    "changeLog.chatTabs.hint": "Messages sent by the Change Log module.",
     "changeLog.empty": "–",
     "changeLog.modifiedBy": "Modified By",
     "changeLog.settings.everyoneActorTypesForm.name": "Actor Types for Everyone",
