#9, Misc - #9: Add Sanity and Honor abilities - Misc: Fix misnamed translations and CSS property

--- a/languages/dnd5e/en.json
+++ b/languages/dnd5e/en.json
@@ -23,10 +23,18 @@
             "actor.system.abilities.dex.bonuses.save": "Dexterity Saving Throw Bonus",
             "actor.system.abilities.dex.proficient": "Dexterity Proficiency",
             "actor.system.abilities.dex.value": "Dexterity Score",
+            "actor.system.abilities.hon.bonuses.check": "Honor Check Bonus",
+            "actor.system.abilities.hon.bonuses.save": "Honor Saving Throw Bonus",
+            "actor.system.abilities.hon.proficient": "Honor Proficiency",
+            "actor.system.abilities.hon.value": "Honor Score",
             "actor.system.abilities.int.bonuses.check": "Intelligence Check Bonus",
             "actor.system.abilities.int.bonuses.save": "Intelligence Saving Throw Bonus",
             "actor.system.abilities.int.proficient": "Intelligence Proficiency",
             "actor.system.abilities.int.value": "Intelligence Score",
+            "actor.system.abilities.san.bonuses.check": "Sainty Check Bonus",
+            "actor.system.abilities.san.bonuses.save": "Sanity Saving Throw Bonus",
+            "actor.system.abilities.san.proficient": "Sanity Proficiency",
+            "actor.system.abilities.san.value": "Sanity Score",
             "actor.system.abilities.str.bonuses.check": "Strength Check Bonus",
             "actor.system.abilities.str.bonuses.save": "Strength Saving Throw Bonus",
             "actor.system.abilities.str.proficient": "Strength Proficiency",
@@ -61,7 +69,7 @@
             "actor.system.attributes.senses.special": "Special Senses",
             "actor.system.attributes.senses.tremorsense": "Tremorsense",
             "actor.system.attributes.senses.truesight": "Truesight",
-            "actor.system.bonuses.abilities.check": "Global Check Bonus",
+            "actor.system.bonuses.abilities.check": "Global Ability Check Bonus",
             "actor.system.bonuses.abilities.save": "Global Saving Throw Bonus",
             "actor.system.bonuses.abilities.skill": "Global Skill Bonus",
             "actor.system.currency.cp": "Copper",
