--- a/languages/en.json
+++ b/languages/en.json
@@ -29,10 +29,10 @@
     "changeLog.tagForm.everyoneActorTypes.title": "Actor Types for Everyone",
     "changeLog.tagForm.everyoneActorTypes.label.available": "Available Types",
     "changeLog.tagForm.everyoneActorTypes.label.selected": "Selected Types",
-    "changeLog.tagForm.everyoneActorTypes.everyoneProperties.description": "Click items in the Available Properties box to select them or type into the Selected Properties.",
-    "changeLog.tagForm.everyoneActorTypes.everyoneProperties.title": "Changes for Everyone",
-    "changeLog.tagForm.everyoneActorTypes.everyoneProperties.label.available": "Available Properties",
-    "changeLog.tagForm.everyoneActorTypes.everyoneProperties.label.selected": "Selected Properties",
+    "changeLog.tagForm.everyoneProperties.description": "Click items in the Available Properties box to select them or type into the Selected Properties.",
+    "changeLog.tagForm.everyoneProperties.title": "Changes for Everyone",
+    "changeLog.tagForm.everyoneProperties.label.available": "Available Properties",
+    "changeLog.tagForm.everyoneProperties.label.selected": "Selected Properties",
     "changeLog.tagForm.gmActorTypes.description": "Click items in the Available Types box to select them or type into the Selected Types.",
     "changeLog.tagForm.gmActorTypes.title": "Actor Types for GM",
     "changeLog.tagForm.gmActorTypes.label.available": "Available Types",
