#13 - Add setting to show equation for numerical changes.

--- a/languages/en.json
+++ b/languages/en.json
@@ -17,6 +17,8 @@
     "changeLog.settings.playerPropertiesForm.name": "Changes for Player",
     "changeLog.settings.playerPropertiesForm.label": "Changes for Player",
     "changeLog.settings.playerPropertiesForm.hint": "Changes to log for the player",
+    "changeLog.settings.showEquation.name": "Show Equation",
+    "changeLog.settings.showEquation.hint": "For numerical changes, choose whether to show the equation on the chat card",
     "changeLog.settings.showRecipients.name": "Show Recipients",
     "changeLog.settings.showRecipients.hint": "Choose whether to show recipients on the chat card",
     "changeLog.settings.showSender.name": "Show Sender",
