#12 - Log actor item creation and deletion.

--- a/languages/archmage/en.json
+++ b/languages/archmage/en.json
@@ -7,8 +7,10 @@
             "activeEffect.disabled": "Active Effect Disabled",
             "actor.flags.dnd5e.initiativeAlert": "Initiative Alert Feat",
             "actor.flags.dnd5e.initiativeAdv": "Advantage on Initiative",
-            "actor.name": "Name",
             "actor.inCombat": "In Combat",
+            "actor.itemCreated": "Actor Item Created",
+            "actor.itemDeleted": "Actor Item Deleted",
+            "actor.name": "Actor Name",
             "actor.system.abilities.cha.dmg": "Charisma Damage",
             "actor.system.abilities.cha.lvl": "Charisma Level",
             "actor.system.abilities.cha.min": "Min Charisma",
