--- a/languages/cyphersystem/en.json
+++ b/languages/cyphersystem/en.json
@@ -9,8 +9,10 @@
             "marker": "Marker",
             "activeEffect.deleted": "Active Effect Deleted",
             "activeEffect.disabled": "Active Effect Disabled",
-            "actor.name": "Name",
             "actor.inCombat": "In Combat",
+            "actor.itemCreated": "Actor Item Created",
+            "actor.itemDeleted": "Actor Item Deleted",
+            "actor.name": "Actor Name",
             "actor.system.abilities.preparedSpells": "Prepared Spells",
             "actor.system.basic.advancement.edge": "Edge Advancement",
             "actor.system.basic.advancement.effort": "Effort Advancement",
@@ -46,6 +48,7 @@
             "actor.system.pools.speed.value": "Current Speed",
             "actor.system.pools.speed.max": "Max Speed",
             "actor.system.pools.speed.edge": "Speed Edge",
+            "item.name": "Item Name",
             "item.system.basic.cost": "Cost",
             "item.system.basic.damage": "Damage",
             "item.system.basic.level": "Level",
