--- a/languages/dnd5e/en.json
+++ b/languages/dnd5e/en.json
@@ -9,8 +9,10 @@
             "activeEffect.disabled": "Active Effect Disabled",
             "actor.flags.dnd5e.initiativeAlert": "Initiative Alert Feat",
             "actor.flags.dnd5e.initiativeAdv": "Advantage on Initiative",
-            "actor.name": "Name",
             "actor.inCombat": "In Combat",
+            "actor.itemCreated": "Actor Item Created",
+            "actor.itemDeleted": "Actor Item Deleted",
+            "actor.name": "Actor Name",
             "actor.system.abilities.cha.bonuses.check": "Charisma Check Bonus",
             "actor.system.abilities.cha.bonuses.save": "Charisma Saving Throw Bonus",
             "actor.system.abilities.cha.checkBonus": "Charisma Total Check Bonus",
@@ -296,6 +298,7 @@
             "actor.system.tools.vehicle.bonus": "Vehicles Bonus",
             "actor.system.tools.vehicle.bonuses.check": "Vehicles Check Bonus",
             "actor.system.tools.vehicle.value": "Vehicles Proficiency",
+            "item.name": "Item Name",
             "item.system.attunement": "Attunement",
             "item.system.capacity.type": "Capacity Type",
             "item.system.capacity.value": "Capacity",
