--- a/languages/ose/en.json
+++ b/languages/ose/en.json
@@ -5,8 +5,10 @@
             "monster": "Monster",
             "activeEffect.deleted": "Active Effect Deleted",
             "activeEffect.disabled": "Active Effect Disabled",
-            "actor.name": "Actor Name",
             "actor.inCombat": "In Combat",
+            "actor.itemCreated": "Actor Item Created",
+            "actor.itemDeleted": "Actor Item Deleted",
+            "actor.name": "Actor Name",
             "actor.system.aac.mod": "AAC Bonus",
             "actor.system.ac.mod": "AC Bonus",
             "actor.system.config.ignoreBonusDamage": "Ignore Bonus Damage",
