--- a/languages/swade/en.json
+++ b/languages/swade/en.json
@@ -6,7 +6,9 @@
             "vehicle": "Vehicle",
             "activeEffect.deleted": "Active Effect Deleted",
             "activeEffect.disabled": "Active Effect Disabled",
-            "actor.name": "Name",
+            "actor.itemCreated": "Actor Item Created",
+            "actor.itemDeleted": "Actor Item Deleted",
+            "actor.name": "Actor Name",
             "actor.system.advances.mode": "Advances Mode",
             "actor.system.advances.rank": "Advances Rank",
             "actor.system.advances.value": "Advances",
@@ -82,6 +84,7 @@
             "actor.hasArcaneBackground": "Arcane Background",
             "actor.inCombat": "In Combat",
             "actor.isEncumbered": "Encumbered",
+            "item.name": "Item Name",
             "item.system.equipped": "Equipped",
             "item.system.quantity": "Quantity",
             "item.system.weight": "Weight",
