--- a/languages/en.json
+++ b/languages/en.json
@@ -2,6 +2,7 @@
     "changeLog.chatTabs.hint": "Messages sent by the Change Log module.",
     "changeLog.empty": "–",
     "changeLog.modifiedBy": "Modified By",
+    "changeLog.saveAndClose": "Save and Close",
     "changeLog.settings.everyoneActorTypesForm.name": "Actor Types for Everyone",
     "changeLog.settings.everyoneActorTypesForm.label": "Actor Types for Everyone",
     "changeLog.settings.everyoneActorTypesForm.hint": "Actor types to log for everyone",
@@ -23,29 +24,29 @@
     "changeLog.settings.showRecipients.hint": "Choose whether to show recipients on the chat card",
     "changeLog.settings.showSender.name": "Show Sender",
     "changeLog.settings.showSender.hint": "Choose whether to show sender on the chat card",
-    "changeLog.tagForm.accept": "Accept",
-    "changeLog.tagForm.cancel": "Cancel",
-    "changeLog.tagForm.unselectAll": "Unselect All",
-    "changeLog.tagForm.selectAll": "Select All",
-    "changeLog.tagForm.everyoneActorTypes.description": "Click items in the Available Types box to select them or type into the Selected Types.",
-    "changeLog.tagForm.everyoneActorTypes.title": "Actor Types for Everyone",
-    "changeLog.tagForm.everyoneActorTypes.label.available": "Available Types",
-    "changeLog.tagForm.everyoneActorTypes.label.selected": "Selected Types",
-    "changeLog.tagForm.everyoneProperties.description": "Click items in the Available Properties box to select them or type into the Selected Properties.",
-    "changeLog.tagForm.everyoneProperties.title": "Changes for Everyone",
-    "changeLog.tagForm.everyoneProperties.label.available": "Available Properties",
-    "changeLog.tagForm.everyoneProperties.label.selected": "Selected Properties",
-    "changeLog.tagForm.gmActorTypes.description": "Click items in the Available Types box to select them or type into the Selected Types.",
-    "changeLog.tagForm.gmActorTypes.title": "Actor Types for GM",
-    "changeLog.tagForm.gmActorTypes.label.available": "Available Types",
-    "changeLog.tagForm.gmActorTypes.label.selected": "Selected Types",
-    "changeLog.tagForm.gmProperties.description": "Click items in the Available Properties box to select them or type into the Selected Properties.",
-    "changeLog.tagForm.gmProperties.title": "Changes for GM",
-    "changeLog.tagForm.gmProperties.label.available": "Available Properties",
-    "changeLog.tagForm.gmProperties.label.selected": "Selected Properties",
-    "changeLog.tagForm.playerProperties.description": "Click items in the Available Properties box to select them or type into the Selected Properties.",
-    "changeLog.tagForm.playerProperties.title": "Changes for Player",
-    "changeLog.tagForm.playerProperties.label.available": "Available Properties",
-    "changeLog.tagForm.playerProperties.label.selected": "Selected Properties",
+    "changeLog.tagifyApp.accept": "Accept",
+    "changeLog.tagifyApp.cancel": "Cancel",
+    "changeLog.tagifyApp.unselectAll": "Unselect All",
+    "changeLog.tagifyApp.selectAll": "Select All",
+    "changeLog.tagifyApp.everyoneActorTypes.description": "Click items in the Available Types box to select them or type into the Selected Types.",
+    "changeLog.tagifyApp.everyoneActorTypes.title": "Actor Types for Everyone",
+    "changeLog.tagifyApp.everyoneActorTypes.label.available": "Available Types",
+    "changeLog.tagifyApp.everyoneActorTypes.label.selected": "Selected Types",
+    "changeLog.tagifyApp.everyoneProperties.description": "Click items in the Available Properties box to select them or type into the Selected Properties.",
+    "changeLog.tagifyApp.everyoneProperties.title": "Changes for Everyone",
+    "changeLog.tagifyApp.everyoneProperties.label.available": "Available Properties",
+    "changeLog.tagifyApp.everyoneProperties.label.selected": "Selected Properties",
+    "changeLog.tagifyApp.gmActorTypes.description": "Click items in the Available Types box to select them or type into the Selected Types.",
+    "changeLog.tagifyApp.gmActorTypes.title": "Actor Types for GM",
+    "changeLog.tagifyApp.gmActorTypes.label.available": "Available Types",
+    "changeLog.tagifyApp.gmActorTypes.label.selected": "Selected Types",
+    "changeLog.tagifyApp.gmProperties.description": "Click items in the Available Properties box to select them or type into the Selected Properties.",
+    "changeLog.tagifyApp.gmProperties.title": "Changes for GM",
+    "changeLog.tagifyApp.gmProperties.label.available": "Available Properties",
+    "changeLog.tagifyApp.gmProperties.label.selected": "Selected Properties",
+    "changeLog.tagifyApp.playerProperties.description": "Click items in the Available Properties box to select them or type into the Selected Properties.",
+    "changeLog.tagifyApp.playerProperties.title": "Changes for Player",
+    "changeLog.tagifyApp.playerProperties.label.available": "Available Properties",
+    "changeLog.tagifyApp.playerProperties.label.selected": "Selected Properties",
     "changeLog.undo": "Undo Change"
 }
