--- a/languages/dnd5e/en.json
+++ b/languages/dnd5e/en.json
@@ -7,8 +7,21 @@
             "group": "Group",
             "activeEffect.deleted": "Active Effect Deleted",
             "activeEffect.disabled": "Active Effect Disabled",
-            "actor.flags.dnd5e.initiativeAlert": "Initiative Alert Feat",
+            "actor.flags.dnd5e.diamondSoul": "Diamond Soul",
+            "actor.flags.dnd5e.elvenAccuracy": "Elven Accuracy",
+            "actor.flags.dnd5e.enhancedDualWielding": "Enhanced Dual Wielding",
+            "actor.flags.dnd5e.halflingLucky": "Halfling Lucky",
+            "actor.flags.dnd5e.initiativeAlert": "Alert Feat",
             "actor.flags.dnd5e.initiativeAdv": "Advantage on Initiative",
+            "actor.flags.dnd5e.jackOfAllTrades": "Jack of All Trades",
+            "actor.flags.dnd5e.observantFeat": "Observant Feat",
+            "actor.flags.dnd5e.powerfulBuild": "Powerful Build",
+            "actor.flags.dnd5e.reliableTalent": "Reliable Talent",
+            "actor.flags.dnd5e.remarkableAthlete": "Remarkable Athlete",
+            "actor.flags.dnd5e.tavernBrawlerFeat": "Tavern Brawler Feat",
+            "actor.flags.dnd5e.weaponCriticalThreshold": "Weapon Critical Threshold",
+            "actor.flags.dnd5e.spellCriticalThreshold": "Spell Critical Threshold",
+            "actor.flags.dnd5e.meleeCriticalDamageDice": "Melee Critical Damage Dice",
             "actor.inCombat": "In Combat",
             "actor.itemCreated": "Actor Item Created",
             "actor.itemDeleted": "Actor Item Deleted",
@@ -70,7 +83,9 @@
             "actor.system.abilities.wis.proficient": "Wisdom Proficiency",
             "actor.system.abilities.wis.value": "Wisdom Score",
             "actor.system.attributes.ac.calc": "AC Calculation",
+            "actor.system.attributes.ac.cover": "AC Cover",
             "actor.system.attributes.ac.flat": "AC Flat",
+            "actor.system.attributes.ac.shield": "AC Shield",
             "actor.system.attributes.death.success": "Successful Death Saves",
             "actor.system.attributes.death.failure": "Failed Death Saves",
             "actor.system.attributes.encumbrance.value": "Current Encumbrance",
@@ -106,9 +121,20 @@
             "actor.system.attributes.spellcasting": "Spellcasting Ability",
             "actor.system.attributes.spelldc": "Spellcasting DC",
             "actor.system.attributes.spellmod": "Spellcasting Modifier",
+            "actor.system.attunement.max": "Max Attunement",
+            "actor.system.attunement.value": "Current Attunement",
             "actor.system.bonuses.abilities.check": "Global Ability Check Bonus",
             "actor.system.bonuses.abilities.save": "Global Saving Throw Bonus",
             "actor.system.bonuses.abilities.skill": "Global Skill Bonus",
+            "actor.system.bonuses.msak.attack": "Melee Spell Attack Bonus",
+            "actor.system.bonuses.msak.damage": "Melee Spell Damage Bonus",
+            "actor.system.bonuses.mwak.attack": "Melee Weapon Attack Bonus",
+            "actor.system.bonuses.mwak.damage": "Melee Weapon Damage Bonus",
+            "actor.system.bonuses.rsak.attack": "Ranged Spell Attack Bonus",
+            "actor.system.bonuses.rsak.damage": "Ranged Spell Damage Bonus",
+            "actor.system.bonuses.rwak.attack": "Ranged Weapon Attack Bonus",
+            "actor.system.bonuses.rwak.damage": "Ranged Weapon Damage Bonus",
+            "actor.system.bonuses.spell.dc": "Global Spell DC Bonus",
             "actor.system.currency.cp": "Copper",
             "actor.system.currency.ep": "Electrum",
             "actor.system.currency.gp": "Gold",
@@ -127,11 +153,16 @@
             "actor.system.details.height": "Height",
             "actor.system.details.ideal": "Ideal",
             "actor.system.details.level": "Level",
+            "actor.system.details.originalClass": "Original Class",
             "actor.system.details.race": "Race",
+            "actor.system.details.type.custom": "Creature Custom Type",
+            "actor.system.details.type.subtype": "Creature Subtype",
+            "actor.system.details.type.value": "Creature Type",
             "actor.system.details.skin": "Skin",
             "actor.system.details.trait": "Trait",
             "actor.system.details.weight": "Weight",
-            "actor.system.details.xp.value": "Experience",
+            "actor.system.details.xp.max": "Max Experience",
+            "actor.system.details.xp.value": "Current Experience",
             "actor.system.resources.lair.value": "Uses Lair Action",
             "actor.system.resources.lair.initiative": "Lair Action Initiative",
             "actor.system.resources.legact.value": "Current Legendary Actions",
@@ -299,7 +330,8 @@
             "actor.system.tools.vehicle.bonuses.check": "Vehicles Check Bonus",
             "actor.system.tools.vehicle.value": "Vehicles Proficiency",
             "item.name": "Item Name",
-            "item.system.attunement": "Attunement",
+            "item.system.attuned": "Item Attuned",
+            "item.system.attunement": "Item Attunement",
             "item.system.capacity.type": "Capacity Type",
             "item.system.capacity.value": "Capacity",
             "item.system.currency.pp": "Item Platinum",
@@ -307,34 +339,72 @@
             "item.system.currency.ep": "Item Electrum",
             "item.system.currency.sp": "Item Silver",
             "item.system.currency.cp": "Item Copper",
+            "item.system.damage.base.bonus": "Item Base Damage Bonus",
+            "item.system.damage.base.denomination": "Item Base Damage Die",
+            "item.system.damage.base.number": "Item Base Damage Number",
+            "item.system.damage.custom.enabled": "Item Damage Formula Enabled",
+            "item.system.damage.custom.formula": "Item Damage Formula",
             "item.system.description.value": "Item Description",
             "item.system.description.chat": "Item Chat Description",
             "item.system.description.unidentified": "Item Unidentified Description",
             "item.system.equipped": "Equipped",
-            "item.system.hitDiceUsed": "Hit Dice Used",
-            "item.system.identified": "Identified",
-            "item.system.level": "Level",
-            "item.system.preparation.prepared": "Prepared",
-            "item.system.price.denomination": "Denomination",
-            "item.system.price.value" : "Price",
-            "item.system.quantity": "Quantity",
-            "item.system.rarity": "Rarity",
-            "item.system.uses.value": "Available Uses",
-            "item.system.uses.max": "Max Uses",
-            "item.system.weight": "Weight",
-            "token.disposition": "Disposition",
-            "token.elevation": "Elevation",
+            "item.system.hitDiceUsed": "Item Hit Dice Used",
+            "item.system.identified": "Item Identified",
+            "item.system.level": "Item Level",
+            "item.system.mastery": "Item Mastery",
+            "item.system.preparation.prepared": "Item Prepared",
+            "item.system.price.denomination": "Item Denomination",
+            "item.system.price.value" : "Item Price",
+            "item.system.proficient": "Item Proficiency Level",
+            "item.system.properties.ada": "Item Property Adamantine",
+            "item.system.properties.amm": "Item Property Ammunition",
+            "item.system.properties.fin": "Item Property Finesse",
+            "item.system.properties.fir": "Item Property Firearm",
+            "item.system.properties.foc": "Item Property Focus",
+            "item.system.properties.hvy": "Item Property Heavy",
+            "item.system.properties.lgt": "Item Property Light",
+            "item.system.properties.lod": "Item Property Loading",
+            "item.system.properties.mgc": "Item Property Magical",
+            "item.system.properties.rch": "Item Property Reach",
+            "item.system.properties.rel": "Item Property Reload",
+            "item.system.properties.ret": "Item Property Returning",
+            "item.system.properties.sil": "Item Property Silvered",
+            "item.system.properties.spc": "Item Property Special",
+            "item.system.properties.thr": "Item Property Thrown",
+            "item.system.properties.two": "Item Property Two-Handed",
+            "item.system.properties.ver": "Item Property Versatile",
+            "item.system.quantity": "Item Quantity",
+            "item.system.range.long": "Item Long Range",
+            "item.system.range.reach": "Item Reach Range",
+            "item.system.range.units": "Item Range Units",
+            "item.system.range.value": "Item Normal Range",
+            "item.system.rarity": "Item Rarity",
+            "item.system.type.value": "Item Type",
+            "item.system.uses.max": "Item Max Uses",
+            "item.system.uses.spent": "Item Spent Uses",
+            "item.system.uses.value": "Item Available Uses",
+            "item.system.weight.value": "Item Weight",
+            "item.system.weight.units": "Item Weight Units",
+            "token.actorLink": "Token Link Actor Data",
+            "token.disposition": "Token Disposition",
+            "token.elevation": "Token Elevation",
+            "token.light.angle": "Token Emission Angle",
+            "token.light.bright": "Token Bright Light Radius",
+            "token.light.color": "Token Light Color",
+            "token.light.dim": "Token Dim Light Radius",
+            "token.lockRotation": "Token Lock Rotation",
             "token.name": "Token Name",
-            "token.rotation": "Rotation",
-            "token.sight.angle": "Sight Angle",
-            "token.sight.attenuation": "Sight Attenuation",
-            "token.sight.brightness": "Sight Brightness",
-            "token.sight.color": "Sight Color",
-            "token.sight.contrast": "Sight Contrast",
-            "token.sight.enabled": "Sight Enabled",
-            "token.sight.range": "Sight Range",
-            "token.sight.saturation": "Sight Saturation",
-            "token.sight.visionMode": "Vision Mode"
+            "token.rotation": "Token Rotation",
+            "token.sort": "Token Sort",
+            "token.sight.angle": "Token Sight Angle",
+            "token.sight.attenuation": "Token Sight Attenuation",
+            "token.sight.brightness": "Token Sight Brightness",
+            "token.sight.color": "Token Sight Color",
+            "token.sight.contrast": "Token Sight Contrast",
+            "token.sight.enabled": "Token Sight Enabled",
+            "token.sight.range": "Token Sight Range",
+            "token.sight.saturation": "Token Sight Saturation",
+            "token.sight.visionMode": "Token Vision Mode"
         }
     }
 }
